--- a/leo-core/charts/leo-core/templates/cronjob.yaml
+++ b/leo-core/charts/leo-core/templates/cronjob.yaml
@@ -15,6 +15,7 @@ spec:
             {{- include "leo-core.selectorLabels" . | nindent 12 }}
         spec:
           restartPolicy: OnFailure
+          {{- $postgresEnabled := .Values.db.postgres.enabled }}
           containers:
             - name: audit
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -25,6 +26,25 @@ spec:
                     secretKeyRef:
                       name: {{ include "leo-core.fullname" . }}-secrets
                       key: OPENAI_API_KEY
+                - name: LEO_DB_ENGINE
+                  value: {{ .Values.db.engine | quote }}
+                - name: POSTGRES_ENABLED
+                  value: {{ ternary "true" "false" $postgresEnabled | quote }}
+                - name: LEO_DB_PATH
+                  value: "/tmp/leo.db"
+                - name: LEO_DB_HOST
+                  value: {{ ternary (printf "%s-postgresql" (include "leo-core.fullname" .)) .Values.db.postgres.host $postgresEnabled | quote }}
+                - name: LEO_DB_PORT
+                  value: {{ .Values.db.postgres.port | quote }}
+                - name: LEO_DB_USER
+                  value: {{ .Values.db.postgres.user | quote }}
+                - name: LEO_DB_NAME
+                  value: {{ .Values.db.postgres.database | quote }}
+                - name: LEO_DB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ include "leo-core.fullname" . }}-secrets
+                      key: LEO_DB_PASSWORD
               command:
                 - /bin/sh
                 - -c
