--- a/leo-core/charts/leo-core/templates/deployment.yaml
+++ b/leo-core/charts/leo-core/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
           ports:
             - containerPort: {{ .Values.service.port }}
               name: http
+          {{- $postgresEnabled := .Values.db.postgres.enabled }}
           env:
             - name: OPENAI_API_KEY
               valueFrom:
@@ -33,8 +34,10 @@ spec:
               value: {{ .Values.db.engine | quote }}
             - name: LEO_DB_PATH
               value: "/tmp/leo.db"
+            - name: POSTGRES_ENABLED
+              value: {{ ternary "true" "false" $postgresEnabled | quote }}
             - name: LEO_DB_HOST
-              value: {{ ternary (printf "%s-postgresql" (include "leo-core.fullname" .)) .Values.db.postgres.host .Values.db.postgres.enabled | quote }}
+              value: {{ ternary (printf "%s-postgresql" (include "leo-core.fullname" .)) .Values.db.postgres.host $postgresEnabled | quote }}
             - name: LEO_DB_USER
               value: {{ .Values.db.postgres.user | quote }}
             - name: LEO_DB_NAME
