--- a/leo-core/charts/leo-core/Chart.yaml
+++ b/leo-core/charts/leo-core/Chart.yaml
@@ -1,10 +1,6 @@
 apiVersion: v2
 name: leo-core
-description: Helm chart for Leo Core
+description: Helm chart for LEO Core AI Visibility Engine
+type: application
 version: 0.2.0
-appVersion: 0.2.0
-dependencies:
-  - name: postgresql
-    version: 12.10.0
-    repository: https://charts.bitnami.com/bitnami
-    condition: db.postgres.enabled
+appVersion: "0.2.0"
