--- a/leo-core/charts/leo-core/templates/configmap.yaml
+++ b/leo-core/charts/leo-core/templates/configmap.yaml
@@ -2,8 +2,5 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "leo-core.fullname" . }}-config
-  labels:
-    {{- include "leo-core.labels" . | nindent 4 }}
 data:
-  WEIGHTS_YML: |-
-{{- (.Files.Get "leo/config/weights.yml") | indent 4 }}
+  LOG_LEVEL: {{ .Values.env.LOG_LEVEL | quote }}
