--- a/leo-core/charts/leo-core/templates/ingress.yaml
+++ b/leo-core/charts/leo-core/templates/ingress.yaml
@@ -5,31 +5,27 @@ metadata:
   name: {{ include "leo-core.fullname" . }}
   labels:
     {{- include "leo-core.labels" . | nindent 4 }}
-  {{- if .Values.ingress.className }}
   annotations:
-    kubernetes.io/ingress.class: {{ .Values.ingress.className }}
-  {{- end }}
+    {{- range $key, $value := .Values.ingress.annotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
-  {{- if .Values.ingress.className }}
-  ingressClassName: {{ .Values.ingress.className }}
-  {{- end }}
+  ingressClassName: {{ .Values.ingress.className | default "nginx" }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host }}
+    - host: {{ .Values.ingress.host | quote }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType | default "Prefix" }}
+          - path: /
+            pathType: Prefix
             backend:
               service:
-                name: {{ include "leo-core.fullname" $ }}
+                name: {{ include "leo-core.fullname" . }}
                 port:
-                  name: http
-          {{- end }}
-    {{- end }}
+                  number: {{ .Values.service.port }}
   {{- if .Values.ingress.tls }}
   tls:
-    {{- toYaml .Values.ingress.tls | nindent 4 }}
+    - hosts:
+        - {{ .Values.ingress.host }}
+      secretName: {{ .Values.ingress.tlsSecret }}
   {{- end }}
 {{- end }}
