--- a/leo-core/charts/leo-core/templates/postgres-dependency.yaml
+++ b/leo-core/charts/leo-core/templates/postgres-dependency.yaml
@@ -2,12 +2,52 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "leo-core.fullname" . }}-postgres-config
-  labels:
-    {{- include "leo-core.labels" . | nindent 4 }}
+  name: leo-postgres-config
 data:
-  POSTGRES_HOST: {{ ternary (printf "%s-postgresql" (include "leo-core.fullname" .)) .Values.db.postgres.host .Values.db.postgres.enabled | quote }}
-  POSTGRES_DATABASE: {{ .Values.db.postgres.database | quote }}
-  POSTGRES_USER: {{ .Values.db.postgres.user | quote }}
-  POSTGRES_PORT: {{ .Values.db.postgres.port | quote }}
+  POSTGRES_DB: {{ .Values.db.postgres.database }}
+  POSTGRES_USER: {{ .Values.db.postgres.user }}
+  POSTGRES_PASSWORD: {{ .Values.db.postgres.password }}
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: leo-postgres
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: leo-postgres
+  template:
+    metadata:
+      labels:
+        app: leo-postgres
+    spec:
+      containers:
+        - name: postgres
+          image: postgres:15
+          envFrom:
+            - configMapRef:
+                name: leo-postgres-config
+          ports:
+            - containerPort: 5432
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
+      volumes:
+        - name: postgres-data
+          persistentVolumeClaim:
+            claimName: leo-postgres-pvc
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: leo-postgres
+spec:
+  ports:
+    - port: 5432
+      targetPort: 5432
+  selector:
+    app: leo-postgres
 {{- end }}
