--- a/leo-core/charts/leo-core/templates/pvc.yaml
+++ b/leo-core/charts/leo-core/templates/pvc.yaml
@@ -1,14 +1,13 @@
-{{- if and .Values.db.postgres.enabled .Values.db.persistence.enabled }}
+{{- if and .Values.db.persistence.enabled .Values.db.postgres.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "leo-core.fullname" . }}-postgres
-  labels:
-    {{- include "leo-core.labels" . | nindent 4 }}
+  name: leo-postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 8Gi
+      storage: 2Gi
+  storageClassName: {{ .Values.db.persistence.storageClass | default "standard" }}
 {{- end }}
