--- a/leo-core/charts/leo-core/templates/secret.yaml
+++ b/leo-core/charts/leo-core/templates/secret.yaml
@@ -1,10 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "leo-core.fullname" . }}-secrets
-  labels:
-    {{- include "leo-core.labels" . | nindent 4 }}
+  name: leo-core-secret
 type: Opaque
-data:
-  OPENAI_API_KEY: {{ .Values.env.OPENAI_API_KEY | b64enc | quote }}
-  LEO_DB_PASSWORD: {{ .Values.db.postgres.password | b64enc | quote }}
+stringData:
+  openai_api_key: {{ .Values.env.OPENAI_API_KEY | quote }}
