--- a/leo-core/charts/leo-core/templates/service.yaml
+++ b/leo-core/charts/leo-core/templates/service.yaml
@@ -2,14 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "leo-core.fullname" . }}
-  labels:
-    {{- include "leo-core.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: {{ .Values.service.port }}
   selector:
-    {{- include "leo-core.selectorLabels" . | nindent 4 }}
+    app: {{ include "leo-core.name" . }}
