--- a/leo-core/charts/leo-core/values.yaml
+++ b/leo-core/charts/leo-core/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/leo-labs/leo-core
+  repository: ghcr.io/yesh48/leo-core
   tag: "0.2.0"
   pullPolicy: IfNotPresent
 
@@ -23,7 +23,6 @@ db:
     password: leo123
     database: leodb
     host: leo-postgres
-    port: 5432
 
 mcp:
   enabled: true
@@ -32,20 +31,8 @@ mcp:
 cronjob:
   enabled: true
   schedule: "0 3 * * *"
-  urls:
-    - https://openai.com
 
 resources:
   limits:
     cpu: 500m
     memory: 512Mi
-
-ingress:
-  enabled: true
-  className: nginx
-  hosts:
-    - host: leo.local
-      paths:
-        - path: /
-          pathType: Prefix
-  tls: []
