--- a/leo-core/leo/mcp/config/manifest.json
+++ b/leo-core/leo/mcp/config/manifest.json
@@ -1,40 +1,21 @@
 {
-  "name": "leo-core-mcp",
-  "version": "0.2.0",
-  "description": "Leo Core MCP server exposing audit and recent score tools.",
+  "schema_version": "1.0",
+  "name": "leo-core",
+  "description": "LEO Core MCP server for AI Visibility Scoring",
   "tools": [
     {
       "name": "leo_audit",
-      "description": "Run a Leo audit for the provided URL and return the JSON report.",
-      "input_schema": {
-        "type": "object",
-        "required": ["url"],
-        "properties": {
-          "url": {
-            "type": "string",
-            "description": "The URL to audit"
-          }
-        }
+      "description": "Run a full audit for a given URL and return structured results",
+      "parameters": {
+        "url": "string"
       }
     },
     {
       "name": "leo_recent",
-      "description": "Return the most recent stored LeoRank scores.",
-      "input_schema": {
-        "type": "object",
-        "properties": {
-          "limit": {
-            "type": "integer",
-            "description": "Maximum number of records to return",
-            "default": 5
-          }
-        }
-      }
+      "description": "Fetch the 10 most recent audit scores from the database",
+      "parameters": {}
     }
   ],
-  "transport": {
-    "type": "tcp",
-    "host": "0.0.0.0",
-    "port": 8800
-  }
+  "port": 8800,
+  "entrypoint": "leo.mcp.server:start_mcp_server"
 }
