--- a/leo-core/requirements.txt
+++ b/leo-core/requirements.txt
@@ -1,12 +1,9 @@
-langgraph
-typer
-fastapi
-uvicorn
-requests
-beautifulsoup4
-pydantic
-numpy
-scikit-learn
-openai
-psycopg2-binary
-pyyaml
+fastapi==0.115.0
+uvicorn==0.30.1
+typer==0.12.5
+pydantic==2.9.2
+requests==2.32.3
+beautifulsoup4==4.12.3
+numpy==1.26.4
+pyyaml==6.0.2
+httpx==0.28.1
